Fixed overflowing element causing scrolling

--- a/fio/src/app/docs/styles/main.scss
+++ b/fio/src/app/docs/styles/main.scss
@@ -72,7 +72,7 @@ fio-doc-viewer {
       top: -150px;
       left: -180px;
 
-      width: 120%;
+      width: 100%;
       height: 50%;
 
       transform: rotate(-15deg);
